Bug 158763 - Input focus does not move into Calc comment from the Navigator under GTK3
Summary: Input focus does not move into Calc comment from the Navigator under GTK3
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Rafael Lima
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: Calc-Comments Navigator GTK3
  Show dependency treegraph
 
Reported: 2023-12-18 13:12 UTC by Gabor Kelemen (Collabora)
Modified: 2024-01-10 11:33 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the issue in a custom build (123.71 KB, image/png)
2023-12-18 13:12 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-12-18 13:12:05 UTC
Created attachment 191486 [details]
Screenshot of the issue in a custom build

After bug 158514 was fixed, a new issue was observed: when in the Navigator the Edit Comment command is used, the focus does not jump into the comment, but stays in the Navigator.

1. Open attachment 191224 [details] from bug 158514
2. In the Navigator right click on either comment, select Edit Comment
3. Type some characters
-> this starts a search in the Navigator under GTK3, but types into the comment box under gen/qt5/win

Doing the same steps in Writer works fine under GTK3.

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d7577174b541e68158d228aa41192227c10a252f
CPU threads: 16; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Stéphane Guillou (stragu) 2024-01-03 23:52:20 UTC
Confirmed as in bug 158514 comment 9.
Thanks!
Comment 2 Rafael Lima 2024-01-09 12:38:57 UTC
Hi Gabor, this fixes the problem for me under gtk3:

https://gerrit.libreoffice.org/c/core/+/161765
Comment 3 Commit Notification 2024-01-10 11:32:48 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9df028306fa75726eeda491f4d643d2a1073b33f

tdf#158763 Focus the document after clicking Edit Comment

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.