tdf#158763 Focus the document after clicking Edit Comment

This patch is needed to make the gtk3 backend focus the document after the Edit Comment is clicked in the Navigator sidebar.

It already worked in gen and kf5.

Change-Id: Ic46be72e6ee7df71f2031e1c6b5f0bf153a8a8c9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161765
Tested-by: Jenkins
Tested-by: Gabor Kelemen <kelemeng@ubuntu.com>
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>